Correction of overflow

--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ section {
 .backimg{
   position: absolute;
   bottom: 0;
-  left: -1vw;
-  width: 102vw;
+  left: 0vw;
+  width: 100vw;
 }
 .bkup{
   transform: scaleX(-1);
